# plurel

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: test-pypi-package.yml  test.yml
docs/: index.html
docs/static/css/: distill.css  index.css  widgets.css
docs/static/js/: index.js
docs/static/js/widgets/: common.js  main.js  stage1.js  stage2.js  stage3.js
examples/: synthesize_from_sql.ipynb
plurel/: __init__.py  bipartite.py  config.py  dag.py  dataset.py  gen.py  schema.py  scm.py  sql_parser.py  transforms.py  ts.py  utils.py
rt/: data.py  embed.py  main.py  main_synthetic.py  model.py  tasks.py
rustler/: Cargo.toml
rustler/src/: common.rs  fly.rs  pre.rs
scripts/: baseline_pretrain.py  cntd_pretrain.py  gen.py  predict_stage1.py  predict_stage2.py  profile_synthetic_gen.py  synthetic_gen.py  synthetic_pretrain.py
test/: conftest.py  test_bipartite.py  test_dag.py  test_data_gen.py  test_dataset.py  test_schema.py  test_scm.py  test_sql_parser.py  test_ts.py  test_utils.py
